--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block content %}
+<div class="row">
+    <div class="col">
+        <h1>Sistema de control de cargas academicas</h1>
+    </div>
+</div>
+
+{% endblock %}
