--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,26 +1,84 @@
 {% load static %}
 
 <div class="container">
+  {% if user.is_authenticated %}
+  <nav style="margin-top: 2rem;">
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Puesto</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Administracion de Estudiantes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Docentes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Usuarios</a></li>
+              </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Actividades</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Administracion de Estudiantes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Docentes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Usuarios</a></li>
+              </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Asignacion</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Administracion de Estudiantes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Docentes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Usuarios</a></li>
+              </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Edificios</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Administracion de Edificios y Salones</a></li>
+                
+              </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Pensum</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Administracion de Estudiantes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Docentes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Usuarios</a></li>
+              </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Usuarios</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Administracion de Estudiantes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Docentes</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de Usuarios</a></li>
+              </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Seguridad</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Perfil</a></li>
+                <li><a class="dropdown-item" href="#">Cambiar Contraseña</a></li>
+                <li><a class="dropdown-item" href="#">Administracion de roles y permisos</a></li>
+              </ul>
+      </li>
+    </ul> 
+
+  </nav>
+  {% endif %}
   <header
-    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" style="margin-bottom: 5rem;">
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
         Inicio
       </a>
     </div>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-      <li><a href="#" class="nav-link px-2">Features</a></li>
-      <li><a href="#" class="nav-link px-2">Pricing</a></li>
-      <li><a href="#" class="nav-link px-2">FAQs</a></li>
-      <li><a href="#" class="nav-link px-2">About</a></li>
-    </ul>
+    
+    
+
 
     <div class="col-md-3 text-end">
       {% if not user.is_authenticated %}
-        <a href="{% url 'users:login' %}" class="btn btn-outline-primary me-2">Login</a>      
-        <a href="{% url 'users:signup' %}" class="btn btn-primary">Sign-up</a>
+        <a href="{% url 'users:login' %}" class="btn btn-outline-primary me-2">Iniciar Sesion</a>      
+        <a href="{% url 'users:signup' %}" class="btn btn-primary">Crear Cuenta</a>
       {% else %}
         <a href="{% url 'users:logout' %}" class="nav-link px-2">Cerrar Sesion</a>
       {% endif %}
