--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,16 @@
+{% if user.is_authenticated %}
 <div class="container">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Puesto</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Actividades</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Asignacion</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Edificios</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pensum</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Usuarios</a></li>            
         </ul>
         <p class="text-center text-body-secondary">&copy; 2023 Company, Inc</p>
     </footer>
 </div>
+{% endif %}
