--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,14 @@
 {% load static %}
 
 {% block content %}
-<div class="row">
-    <div class="col">
-        <h1>Sistema de control de cargas academicas</h1>
+<div class="container">
+    <div class="row justify-content-center text-center">
+        <div class="col-4">
+            <h1 style="text-transform: uppercase;">Sistema de control de cargas academicas</h1>
+        </div>
     </div>
+
 </div>
+
 
 {% endblock %}
