--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,76 +1,48 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block css %}
-<style>
-    body{
-        background: #141E30;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        
-    }
-    .a{
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;    
-    }
-    .b{
-        max-width: 700px;
-        max-height: 460px;
-        width: 100%;
-        height: 100%;
-        background: white;
-        border-radius: 12px; 
 
-    }
-    .formulario{
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 4rem;
-    }
-    
-</style>
-
-{% endblock %}
 
 {% block content %}
-<div class="row a">
-    <div class="col-4 b" >
-        <div class="card  formulario">
-            <h5 class="card-header">INICIO DE SESION</h5>
-            <div class="card-body">
-                <form method="POST">
-                    {% csrf_token %}
-                    
-                    <div class ="form-group ">
-                        <label for="username">Usuario</label>
-                        <input type="text" name ="username" class="form-control">
-                    </div>
-            
-                    <div class ="form-group">
-                        <label for="password">Contraseña</label>
-                        <input type="password" name ="password" class="form-control">
-                    </div>
-            
-                    <div class="form-group" style="margin-top: 2rem;">
-                        <a href="{% url 'users:signup' %}">CREAR CUENTA NUEVA</a>
-                    </div>
-                    <br>
-            
-            
-                    <div class="d-grid grap-2 col-6 mx-auto">
-                        <button type="submit" class="btn btn-lg btn-dark ">LOGIN</button>
-                    </div> 
-                </form>
-            
-        
-            </div>
-        </div>
+<div class="container ">
+    <div class="row justify-content-center">
+        <div class="col-4 ">
+            <div class="card  ">
+                <h5 class="card-header">INICIO DE SESION</h5>
+                <div class="card-body">
+                    <form method="POST">
+                        {% csrf_token %}
 
+                        <div class="form-group ">
+                            <label for="username">Usuario</label>
+                            <input type="text" name="username" class="form-control">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Contraseña</label>
+                            <input type="password" name="password" class="form-control">
+                        </div>
+
+                        <div class="form-group" style="margin-top: 2rem;">
+                            <a href="{% url 'users:signup' %}">CREAR CUENTA NUEVA</a>
+                        </div>
+                        <br>
+
+
+                        <div class="d-grid grap-2 col-6 mx-auto">
+                            <button type="submit" class="btn btn-lg btn-dark ">Iniciar Sesion</button>
+                        </div>
+                    </form>
+
+
+                </div>
+            </div>
+
+        </div>
     </div>
+
 </div>
+
 
 
 
