--- a/templates/users/perfil.html
+++ b/templates/users/perfil.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+
 {% block content %}
 <div class="container">
     <div class="row">
@@ -8,7 +10,7 @@
             <h2 style="text-align: center;">Informacion basica sobre <span>{{perfil}}</span></h2>
         </div>
         <div class="col">
-            <p style="text-align: center;">{{user.username}}</p>
+            <p style="text-align: center;">{{user.username}} {{perfil.noPersonal}}</p>
         </div>
     </div>
 </div>
