--- a/templates/edificios/clasificaciones/clasificacionForm.html
+++ b/templates/edificios/clasificaciones/clasificacionForm.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="card" style="margin-top: 2.5rem;">
     <div class="card-body">
-        <a href="{% url 'edificios:Edificio'%}">Regresar</a>
+        <a href="{% url 'edificios:CrearSalon'%}">Regresar</a>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
@@ -28,7 +28,7 @@
             <br>
             
             <button type="submit" class="btn  btn-dark ">{{message}}</button>
-            <a href="{% url 'edificios:Edificio'%}">CANCELAR</a>
+            <a href="{% url 'edificios:Clasificacion'%}">CANCELAR</a>
             
 
         </form>
