--- a/templates/cargas/carga_list.html
+++ b/templates/cargas/carga_list.html
@@ -1,8 +1,156 @@
-<h1><a href="{%url 'carga:carga-create' %}">Crear nueva carga</a></h1>
+{% extends 'base.html' %}
 
-%for c in carga %
+{% load static %}
 
-<p>{{ c.nombre }} <a href="{%url 'carga:carga-update' c.pk%}">Editar</a><a href="{%url 'carga:carga-delete' c.pk %}">Eliminar</a></p>
+{% block content %}
 
-{% endfor %}
 
+{% if carga_list %}
+
+<div class="row" style="margin-top: 5rem;">  
+  <div class="d-flex justify-content-center">
+    
+    <h2>{{ message }}</h2>
+
+  </div>
+</div>
+<div class="row">
+  <div class="d-flex justify-content-center">
+    {% include 'cargas/snippets/breadcrumb.html'%}
+
+  </div>
+
+</div>
+
+
+
+<div class="row">
+
+  <!--BOTONES DE AGREGAR, BUSCAR-->
+  <div class="row">
+
+    <div class="col">
+      <div class="d-flex justify-content-start">
+        <a class="btn btn-dark" href="{% url 'carga:carga-create'%}">Agregar: </a>
+      </div>
+    </div>
+
+    
+
+    
+  </div>
+
+  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE EDIFICIOS-->
+  <div class="row" style="margin-top: 2rem;">
+    <div class="col">
+      <table class="table table-hover caption-top ">
+        <div class="d-flex justify-content-end">
+          {% include 'edificios/snippets/edificioBuscar.html' with query=query %}
+
+        </div>
+        
+        <thead>          
+          <tr>
+            <th scope="col">Año</th>
+            <th scope="col">Ciclo académico</th>
+            <th scope="col">Estado</th>
+            <th scope="col">Fecha envío</th>
+            <th scope="col">Fecha de aprobación</th>
+
+          </tr>
+
+
+
+        </thead>
+        <tbody>
+          {% for carga in carga_list %}
+          <tr>
+            <td scope="row">{{carga.year}}</td>
+            <td>{{carga.ciclo_acad}}</td>
+            <td> {{carga.estado}}</td>
+            <td>{{carga.get_created_at}}</td>
+            <td>{{carga.fecha_aprob}}</td>
+
+            <td>
+              <a class="btn btn-outline-dark" href="{% url 'carga:carga-update' carga.id %}">Editar</a>
+              <a class="btn btn-outline-dark" href="{% url 'carga:carga-delete' carga.id %}">Eliminar</a>
+            </td>
+          </tr>
+          {% endfor %}
+
+        </tbody>
+      </table>
+      
+      <nav aria-label="...">
+        <ul class="pagination">
+
+          
+          {% if page_obj.has_previous %}
+          <li class="page-item activate">
+            <a class="page-link" href="?page={{page_obj.previous_page_number }}">Previous</a>
+          </li>
+          {%else%}
+          <li class="page-item disabled">
+            <a class="page-link">Previous</a>
+          </li>
+          {% endif %}
+
+
+          
+          
+          
+          {% for num in page_obj.paginator.page_range %}
+            {% if num == page_obj.number%}
+            <li class="page-item active" aria-current="page">
+              <a class="page-link" href="#">{{num}}</a>
+            </li>
+          
+            {% else %}
+            <li class="page-item" aria-current="page">
+              <a class="page-link" href="?page={{num}}">{{num}}</a>
+            </li>
+            {% endif %}
+
+          {% endfor%}
+
+          
+
+          {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" >Next</a>
+          </li>
+          {% endif %}
+
+        </ul>
+      </nav>
+
+    </div>
+  </div>
+
+</div>
+
+{% else%}
+
+<div class="row">
+  <div class="col-12">
+    <div class="d-flex justify-content-center" style="height: 50vh; align-items: center; display: flex;">
+      <h2>No se ha encontrado ninguna carga</h2>
+      <a class="btn btn btn-outline-dark" href="{% url 'carga:carga-create' %}"  style="margin-left: 0.5rem;">Agregar</a>
+
+
+     
+      
+      
+    </div>
+  </div>
+</div>
+
+
+{% endif %}
+
+
+{% endblock %}
