--- a/templates/edificios/salones/salon.html
+++ b/templates/edificios/salones/salon.html
@@ -42,7 +42,7 @@
     
   </div>
 
-  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE EDIFICIOS-->
+  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE SALONES-->
   <div class="row" style="margin-top: 2rem;">
     <div class="col">
       <table class="table table-hover caption-top ">
