--- a/templates/pensums/cursos/curso.html
+++ b/templates/pensums/cursos/curso.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-{% if clasificacion_list %}
+{% if curso_list %}
 
 <div class="row" style="margin-top: 5rem;">  
   <div class="d-flex justify-content-center">
@@ -16,7 +16,7 @@
 </div>
 <div class="row">
   <div class="d-flex justify-content-center">
-    {% include 'edificios/clasificaciones/snippets/breadcrumb.html'%}
+    {% include 'pensums/cursos/snippets/breadcrumb.html'%}
 
   </div>
 
@@ -31,7 +31,7 @@
 
     <div class="col">
       <div class="d-flex justify-content-start">
-        <a class="btn btn-dark" href="{% url 'edificios:CrearClasificacion'%}">Crear: </a>
+        <a class="btn btn-dark" href="{% url 'pensums:CrearCurso'%}">Crear: </a>
       </div>
     </div>
 
@@ -40,19 +40,19 @@
     
   </div>
 
-  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE CLASIFICACIONES-->
+  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE CURSOS-->
   <div class="row" style="margin-top: 2rem;">
     <div class="col">
       <table class="table table-hover caption-top ">
         <div class="d-flex justify-content-end">
-          {% include 'edificios/clasificaciones/snippets/clasificacionBuscar.html' with query=query %}
+          {% include 'pensums/cursos/snippets/cursoBuscar.html' with query=query %}
 
         </div>
         
         <thead>          
           <tr>
-            <th scope="col">Nombre Clasificación</th>
-            <th scope="col">Habilitado</th>
+            <th scope="col">Código</th>
+            <th scope="col">Nombre</th>
             <th scope="col">Opciones</th>
 
           </tr>
@@ -61,16 +61,16 @@
 
         </thead>
         <tbody>
-          {% for clasificacion in clasificacion_list %}
+          {% for curso in curso_list %}
           <tr>
-            <td scope="row">{{clasificacion.tipo_salon_uso}}</td>
-            <td>{{clasificacion.estado}}</td>
+            <td scope="row">{{curso.idCurso}}</td>
+            <td>{{curso.nombreCurso}}</td>
 
             <td>
-              <!--<a class="btn btn-outline-dark" href="{% url 'edificios:DetalleClasificacion' clasificacion.id %}">Mostrar</a>-->
-              <a class="btn btn-outline-dark" href="{% url 'edificios:ActualizarClasificacion' clasificacion.id %}">Editar</a>
-              <a class="btn btn-outline-dark" href="{% url 'edificios:EliminarClasificacion' clasificacion.id %}">Eliminar</a>
-
+              <!--<a class="btn btn-outline-dark" href="{% url 'pensums:DetalleCurso' curso.id %}">Mostrar</a>-->
+              <a class="btn btn-outline-dark" href="{% url 'pensums:ActualizarCurso' curso.id %}">Editar</a>
+              <a class="btn btn-outline-dark" href="{% url 'pensums:EliminarCurso' curso.id %}">Eliminar</a>
+              <a class="btn btn-outline-dark" href="#">Administrar cursos</a>
             </td>
           </tr>
           {% endfor %}
@@ -122,10 +122,6 @@
         </ul>
       </nav>
 
-      <div class="d-flex justify-content-start">
-        <a class="btn btn-outline-dark" href="{% url 'edificios:Salon' %}">Regresar</a>
-        </div>
-
     </div>
   </div>
 
@@ -136,13 +132,9 @@
 <div class="row">
   <div class="col-12">
     <div class="d-flex justify-content-center" style="height: 50vh; align-items: center; display: flex;">
-      <h2>No se ha encontrado ninguna clasificacion</h2>
-      <a class="btn btn btn-outline-dark" href="{% url 'edificios:CrearClasificacion' %}"  style="margin-left: 0.5rem;">Crear</a>
+      <h2>No se ha encontrado ningún curso</h2>
+      <a class="btn btn btn-outline-dark" href="{% url 'pensums:CrearCurso' %}"  style="margin-left: 0.5rem;">Crear</a>
 
-
-     
-      
-      
     </div>
   </div>
 </div>
