--- a/templates/cargas/carga_list.html
+++ b/templates/cargas/carga_list.html
@@ -10,7 +10,7 @@
 <div class="row" style="margin-top: 5rem;">  
   <div class="d-flex justify-content-center">
     
-    <h2>{{ message }}</h2>
+    <h1>Hola</h1>
 
   </div>
 </div>
