--- a/templates/cargas/snippets/carga_listar.html
+++ b/templates/cargas/snippets/carga_listar.html
@@ -31,7 +31,7 @@
       {% else %}
       <div class="h5">
         No se ha encontrado registro de la carga buscada
-        <a href="{% url 'carga:carga-list' %}" class="btn btn-primary">Regresar</a>
+        <a href="{% url 'cargas:carga-list' %}" class="btn btn-primary">Regresar</a>
       </div>
       {% endif %}
     </div>
