--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -42,14 +42,14 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Edificios</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="{{Edificio}}">Administracion de Edificios y Salones</a></li>
+          <li><a class="dropdown-item" href="{{Edificio}}">Administración de Edificios y Salones</a></li>
 
         </ul>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Pensum</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="{{Curso}}">Administracion de Cursos</a></li>
+          <li><a class="dropdown-item" href="{{Curso}}">Administración de Cursos</a></li>
           <li><a class="dropdown-item" href="#">Administracion de Carreras</a></li>          
         </ul>
       </li>
