--- a/templates/pensums/carreras/carreraBuscar.html
+++ b/templates/pensums/carreras/carreraBuscar.html
@@ -5,14 +5,14 @@
 <div class="row" style="margin-top: 2rem;">
   <div class="col">
     <div class="d-flex justify-content-start">
-      {% include 'pensums/cursos/snippets/breadcrumb.html'%}
+      {% include 'pensums/carreras/snippets/breadcrumb.html'%}
     </div>
   </div>
 </div>
 
 <div class="row">
   <div class="col-12">
-    {% include 'pensums/cursos/snippets/cursoBuscar.html' with query=query %}
+    {% include 'pensums/carreras/snippets/carreraBuscar.html' with query=query %}
   </div>
 </div>
 
@@ -25,13 +25,13 @@
 
 <div class="row">
   <div class="col">
-    {% include 'pensums/cursos/snippets/cursoListar.html' %}
+    {% include 'pensums/carreras/snippets/carreraListar.html' %}
   </div>
 </div>
 
 <div class="row">
   <div>
-      <a class="btn btn-outline-dark" href="{% url 'pensums:Curso' %}">Regresar</a>
+      <a class="btn btn-outline-dark" href="{% url 'pensums:Carrera' %}">Regresar</a>
   </div>
 
 </div>
