--- a/templates/cargas/carga_list.html
+++ b/templates/cargas/carga_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-{% if cargas_list %}
+{% if carga_list %}
 
 <div class="row" style="margin-top: 5rem;">  
   <div class="d-flex justify-content-center">
