Cargas, lo básico al 100

--- a/templates/cargas/carga_create.html
+++ b/templates/cargas/carga_create.html
@@ -47,7 +47,7 @@
             <br>
             
             <button type='submit' class="btn  btn-dark ">Crear</button>
-            <a>CANCELAR</a>
+            <a href="{% url 'cargas:carga-list' %}">CANCELAR</a>
 
         </form>
 
