--- a/templates/pensums/carreras/carreraDetalle.html
+++ b/templates/pensums/carreras/carreraDetalle.html
@@ -26,13 +26,13 @@
     
     <div class="col-6">
         <div class="h5" style="margin-bottom: 2rem;">
-            <span style="text-transform: uppercase;">Código de la carrera:  </span>
-            <span class="p2" style="color: red;">{{carrera.idCarrera}}</span>
+            <span style="text-transform: uppercase;">Nombre de la carrera:  </span>
+            <span class="p2" style="color: red;">{{carrera.nombreCarrera}}</span>
         </div>
 
         <div class="h5" style="margin-bottom: 2rem;">
-            <span style="text-transform: uppercase;">Nombre de la carrera: </span>
-            <span class="p2" style="color: red;"><br>{{carrera.nombreCarrera}}</span>
+            <span style="text-transform: uppercase;">Encargado de área: </span>
+            <span class="p2" style="color: red;"><br>{{carrera.encargado_area}}</span>
         </div>
 
         <div class="h5" style="margin-bottom: 2rem;">
