--- a/templates/pensums/carreras/snippets/carrera.html
+++ b/templates/pensums/carreras/snippets/carrera.html
@@ -1,5 +1,5 @@
-<td scope="row">{{carrera.idCarrera}}</td>
-<td>{{carrera.nombreCarrera}}</td>
+<td scope="row">{{carrera.nombreCarrera}}</td>
+<td>{{carrera.encargado_area}}</td>
 <td>{{carrera.get_created_at}}</td>
 
 <td>
