--- a/templates/pensums/carreras/snippets/carreraListar.html
+++ b/templates/pensums/carreras/snippets/carreraListar.html
@@ -6,8 +6,8 @@
 
       <thead>
         <tr>
-          <th scope="col">Código</th>
           <th scope="col">Nombre</th>
+          <th scope="col">Encargado de área</th>
           <th scope="col">Fecha de creación</th>
         </tr>
 
