--- a/templates/pensums/cursos/curso.html
+++ b/templates/pensums/cursos/curso.html
@@ -63,7 +63,7 @@
         <tbody>
           {% for curso in curso_list %}
           <tr>
-            <td scope="row">{{curso.idCurso}}</td>
+            <td scope="row">{{curso.codigoCurso}}</td>
             <td>{{curso.nombreCurso}}</td>
 
             <td>
