--- a/templates/pensums/cursos/cursoDetalle.html
+++ b/templates/pensums/cursos/cursoDetalle.html
@@ -27,7 +27,7 @@
     <div class="col-6">
         <div class="h5" style="margin-bottom: 2rem;">
             <span style="text-transform: uppercase;">Código del Curso:  </span>
-            <span class="p2" style="color: red;">{{curso.idCurso}}</span>
+            <span class="p2" style="color: red;">{{curso.codigoCurso}}</span>
         </div>
 
         <div class="h5" style="margin-bottom: 2rem;">
