--- a/templates/cargas/sub/modcargalist.html
+++ b/templates/cargas/sub/modcargalist.html
@@ -28,7 +28,7 @@
 
     <div class="col">
       <div class="d-flex justify-content-start">
-        <a class="btn btn-dark" href="{% url 'cargas:carga-create'%}">Agregar: </a>
+        <a class="btn btn-dark" href="{% url 'cargas:modcarga-create'%}">Agregar: </a>
       </div>
     </div>
 
