Avanzando con el estilo de docente, estudiante, usuario, rol

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -57,16 +57,16 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Usuarios</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Administracion de Estudiantes</a></li>
-          <li><a class="dropdown-item" href="#">Administracion de Docentes</a></li>
-          <li><a class="dropdown-item" href="#">Administracion de Usuarios</a></li>
+          <li><a class="dropdown-item" href="{% url 'users:estudiante' %}">Administracion de Estudiantes</a></li>
+          <li><a class="dropdown-item" href="{% url 'users:docente'%}">Administracion de Docentes</a></li>
+          <li><a class="dropdown-item" href="{% url 'users:usuario' %}">Administracion de Usuarios</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Seguridad</a>
         <ul class="dropdown-menu">          
           <li><a class="dropdown-item" href="{% url 'users:update_password' %}">Cambiar Contraseña</a></li>
-          <li><a class="dropdown-item" href="#">Administracion de roles y permisos</a></li>
+          <li><a class="dropdown-item" href="{% url 'users:list_rolPermiso' %}">Administracion de roles y permisos</a></li>
         </ul>
       </li>
     </ul>
