--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,16 +24,9 @@
           <li><a class="dropdown-item" href="#">Administracion de puestos</a></li>          
         </ul>
       </li>
+      
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Actividades</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Administracion de Cursos</a></li>
-          <li><a class="dropdown-item" href="#">Administracion de laboratorios de cursos</a></li>
-          <li><a class="dropdown-item" href="#">Control de edicion de actas</a></li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Asignacion</a>
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Carga</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="#">Control de asignacion de cursos</a></li>
           <li><a class="dropdown-item" href="#">Asignacion de cursos</a></li>
