--- a/templates/users/RolPermiso/Rol/rol.html
+++ b/templates/users/RolPermiso/Rol/rol.html
@@ -57,7 +57,7 @@
 <div class="row justify-content-center">
     <div class="col-4" style="text-align: center;">
         <h5>En este momento no se ha agregado ningun Rol a la plataforma</h5>
-        <a href="#" class="btn btn-outline-dark">Crear Usuario</a>
+        <a href="#" class="btn btn-outline-dark">Crear Permiso</a>
     </div>
 </div>
 
