--- a/templates/users/RolPermiso/Permiso/permiso.html
+++ b/templates/users/RolPermiso/Permiso/permiso.html
@@ -1,11 +1,11 @@
 
 {% load static %}
 
-{% if  rol_list %}
+{% if  permiso_list %}
 <div class="row" style="margin-top: 2.5rem;">
     <div class="d-flex justify-content-center">
 
-        <h2>Roles</h2>
+        <h2>Permisos</h2>
 
     </div>
 </div>
