--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Puesto</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Administracion de puestos</a></li>          
+          <li><a class="dropdown-item" href="{% url 'users:puesto' %}">Administracion de puestos</a></li>          
         </ul>
       </li>
       
